--- a/index.html
+++ b/index.html
@@ -7,8 +7,26 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Los Angeles</option>
+      </select>
 
+      <div class="city">
+        <h2>San Fransico</h2>
+        <div class="date">September 7th 2024</div>
+        <div class="time">1:48:15 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">September 7th 2024</div>
+        <div class="time">1:48:15 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/lea-bee" target="_blank">Leah Twigg</a> and is
