--- a/index.html
+++ b/index.html
@@ -13,25 +13,40 @@
         <option value="">Select a city..</option>
         <option value="">London</option>
         <option value="">New York</option>
-        <option value="">Los Angeles</option>
+        <option value="">Hong Kong</option>
       </select>
 
       <div class="city">
-        <h2>San Fransico</h2>
-        <div class="date">September 7th 2024</div>
-        <div class="time">1:48:15 PM</div>
+        <div>
+          <h2>San Fransico</h2>
+          <div class="date">September 7th 2024</div>
+        </div>
+        <div class="time">
+          1:48:15 <small>PM</small> <br /><span>hours ahead/behind</span>
+        </div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">September 7th 2024</div>
-        <div class="time">1:48:15 PM</div>
+        <div>
+          <h2>Sydney</h2>
+          <div class="date">September 7th 2024</div>
+        </div>
+        <div class="time">
+          1:48:15 <small>PM</small> <br /><span>hours ahead/behind</span>
+        </div>
       </div>
     </div>
     <footer>
       This project was coded by
-      <a href="https://github.com/lea-bee" target="_blank">Leah Twigg</a> and is
+      <strong
+        ><a href="https://github.com/lea-bee" target="_blank">Leah Twigg</a>
+      </strong>
+      and is
       <a href="https://github.com/lea-bee/world-clock-project" target="_blank"
         >open-sourced on GitHub.</a
+      >
+      <a
+        href="https://www.vecteezy.com/vector-art/20500415-world-map-black-and-white-background-design"
+        >World Map Black And White Background Design Vectors by Vecteezy</a
       >
     </footer>
     <script src="javascript/index.js"></script>
