--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>World Clock 🗺</h1>
       <select>
         <option value="">Select a city..</option>
         <option value="">London</option>
@@ -23,14 +23,14 @@
           <h2>Chicago</h2>
           <div class="date"></div>
         </div>
-        <div class="time"><br /><span>hours ahead/behind</span></div>
+        <div class="time"></div>
       </div>
       <div class="city" id="sydney">
         <div>
           <h2>Sydney</h2>
           <div class="date"></div>
         </div>
-        <div class="time"><br /><span>hours ahead/behind</span></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
