Added current location

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <select id="city">
         <option value="">Select a city..</option>
+        <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="Asia/Seoul">Seoul</option>
         <option value="Indian/Maldives">Maldives</option>
@@ -38,7 +39,7 @@
       </div>
     </div>
     <footer>
-      This project was coded by
+      This project was coded with ❤ by
       <strong
         ><a href="https://github.com/lea-bee" target="_blank">Leah Twigg</a>
       </strong>
