Added time difference through js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="date"></div>
           </div>
           <div class="time"></div>
+          <div class="zone"></div>
         </div>
         <div class="city" id="sydney">
           <div>
@@ -35,6 +36,7 @@
             <div class="date"></div>
           </div>
           <div class="time"></div>
+          <div class="zone"></div>
         </div>
       </div>
     </div>
